--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Build & Push Image
       run: |
         echo "${{ secrets.DOCKERPW }}" | docker login -u "dapurspl" --password-stdin
-        docker image build -t dapurspl/2026:latest .
-        docker push dapurspl/2026:latest
+        docker image build -t dapurspl/2026new:latest .
+        docker push dapurspl/2026new:latest
